# realcolor

./: .gitignore  404.html  LICENSE  Makefile  README.md  README.qmd  index.html  justfile  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: doc.yaml  lint.yaml  tests.yaml  type.yaml
contributing/: index.html
docs/: contributing.md  index.md
docs/reference/: add_digit.md
examples/: index.html
overrides/partials/: footer.html
realcolor/: __init__.py  colors.py  main.py
reference/add_digit/: index.html
search/: search_index.json
tests/: test_main.py
