[project]
name = "realcolor"
description = "Description"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["colors", "colorblind", "deuteranomaly", "protanomaly", "tritanomaly", "matplotlib", "seaborn", "plotnine"]
authors = [
  { name="Joseph Barbier", email="joseph@ysunflower.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "colorspacious>=1.1.2",
    "matplotlib",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["realcolor"]

[tool.uv.sources]
realcolor = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "ty>=0.0.15",
    "plotnine[extra]",
]

[project.urls]
Homepage = "https://github.com/y-sunflower/realcolor/"
Issues = "https://github.com/y-sunflower/realcolor/issues"
Documentation = "https://github.com/y-sunflower/realcolor/"
Repository = "https://github.com/y-sunflower/realcolor"
